# pan-tilt-app

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  makefile
server/: camera-network.py
src/: gui.cpp  layout.cpp  main.cpp  network.cpp  pylon-video.cpp
src/include/: gui.hpp  layout.hpp  macros.hpp  network.hpp  pylon-video.hpp
src/moc/: gui.moc  layout.moc
